Changes were added for supporting MySQL DB, documentation via Swagger was improved

--- a/DiplomaAPI/appsettings.json
+++ b/DiplomaAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Data Source=DESKTOP-8GLMCKU;Initial Catalog=MedicalDB;Integrated Security=True;TrustServerCertificate=true"
+    "SqlServer": "Data Source=DESKTOP-8GLMCKU;Initial Catalog=ChemWebDB;Integrated Security=True;TrustServerCertificate=true",
+    "MySqlServer": "server=localhost; port=3306; database=testChemDB; uid=userWebAPI; pwd=;"
   }
 }
