--- a/DiplomaAPI/Properties/launchSettings.json
+++ b/DiplomaAPI/Properties/launchSettings.json
@@ -13,8 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7278;http://localhost:5093",
+      "launchUrl": "",
+      "applicationUrl": "https://localhost:7278;http://192.168.1.111:5090;http://localhost:5030;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
